adicionei uma aba lateral

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,16 @@
-<p>header works!</p>
+<div class="header">
+ 
+    
+  <div class="navigate-buttons">
+    <ul>
+      <li><a href="http://localhost:4200/home/" class="link">Home</a></li>
+
+      <li><a href="http://localhost:4200/dashboard/" class="link">Dashboard</a></li>
+
+      <li><a href="http://localhost:4200/sac/" class="link">SAC</a></li>
+
+      <li><a href="http://localhost:4200/quemsomos/" class="link">Quem Somos</a></li>
+    </ul>
+    <div class="frame"></div>
+  </div>
+</div>
