--- a/src/app/pages/login/containers/login/login.component.html
+++ b/src/app/pages/login/containers/login/login.component.html
@@ -4,8 +4,16 @@
 />
 
 <div class="bgimage">
+  <div class="h1">
+    <h1>SignIn/SignUp</h1>
+  </div>
+  <div class="container-checkbox">
+    <div class="checkbox">
+      <input type="checkbox" (click)="modificarCardLogin()" />
+    </div>
+  </div>
+
   <div class="login-box">
-    
     <div class="login-content">
       @if (conditionSignIn) {
 
