--- a/src/app/pages/login/components/signin/signin.component.html
+++ b/src/app/pages/login/components/signin/signin.component.html
@@ -8,7 +8,7 @@
     <input type="text" placeholder="Email" formControlName="email" />
     <br/>
 
-    <input type="password" placeholder="Senha" formControlName="senha" />
+    <input type="password" placeholder="Password" formControlName="senha" />
   </div>
 
 
