--- a/src/app/pages/login/components/signin/signin.component.scss
+++ b/src/app/pages/login/components/signin/signin.component.scss
@@ -3,7 +3,8 @@
 .login-box h1{
 text-align: center;
 margin-bottom: 30px;
-
+color: #ffffff;
+text-shadow: rgb(121, 121, 121) 0.05em 0.05em 0.2em;
 }
 .login-box{
  
