--- a/src/app/pages/login/components/signup/signup.component.html
+++ b/src/app/pages/login/components/signup/signup.component.html
@@ -12,7 +12,7 @@
   <input type="text" placeholder="Email" formControlName="email" />
   <br />
 
-  <input type="password" placeholder="Senha" formControlName="senha" />
+  <input type="password" placeholder="Password" formControlName="senha" />
 </div>
 
 <div>
