--- a/src/app/pages/login/components/signup/signup.component.scss
+++ b/src/app/pages/login/components/signup/signup.component.scss
@@ -1,18 +1,34 @@
 
-.btn {
-
-    border-radius: 4px;
-
-    font-size: 13px;
-    font-weight: 600;
-    color: #999999;
-    align-items: center;
-    background-color: #000000;
-
-  }
-.btn:hover {
-
-  background-color: #3fbcee;
+.register-box h1{
+  text-align: center;
+  margin-bottom:6px;
   color: #ffffff;
+  text-shadow: rgb(121, 121, 121) 0.05em 0.05em 0.2em;
 
-}
+  
+  }
+  .register-box{
+   
+  border-radius: 12px;
+     margin-bottom: 6px;
+    }
+    
+  
+  .btn {
+  display: block;
+      border-radius: 4px;
+      margin: 8px 40px 10px 40px;
+      font-size: 13px;
+      font-weight: 600;
+      color: #999999;
+      align-items: center;
+      background-color: #000000;
+  
+    }
+  .btn:hover {
+  
+    background-color: #3fbcee;
+    color: #ffffff;
+  
+  }
+  
