criacao dos componentes do menu e adicionando as rotas dos mesmos casa

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,16 +6,16 @@
 
     <div class="navigate-buttons">
       <ul>
-        <li> <a href="http://localhost:4200/home"><img src="../../assets/images/Style=Filledsettings.png" class="img-top">Account</a></li>
+        <li> <a href="http://localhost:4200/pages/account"><img src="../../assets/images/Style=Filledsettings.png" class="img-top">Account</a></li>
 
         <li>
-          <a href="http://localhost:4200/home"><img src="../../assets/images/Style=Filleddashboard.png" class="img-top">Dashboard</a>
+          <a href="http://localhost:4200/pages/dashboard"><img src="../../assets/images/Style=Filleddashboard.png" class="img-top">Dashboard</a>
         </li>
 
-        <li> <a href="http://localhost:4200/home"><img src="../../assets/images/Style=Sharpsac.png" class="img-top">SAC</a>
+        <li> <a href="http://localhost:4200/pages/sac"><img src="../../assets/images/Style=Sharpsac.png" class="img-top">SAC</a>
 
         <li>
-          <a href="http://localhost:4200/home"><img src="../../assets/images/Style=Roundpin.png" class="img-top">Quem Somos</a>
+          <a href="http://localhost:4200/pages/about"><img src="../../assets/images/Style=Roundpin.png" class="img-top">Quem Somos</a>
 
         </li>
       </ul>
@@ -25,15 +25,15 @@
   <nb-sidebar left tag="left">
     @if (sidebarState === 'compacted') {
     
-        <a href="http://localhost:4200/carteira"><img src="../../assets/images/Style=Roundwallet.png" class="img-side"></a>
+        <a href="http://localhost:4200/pages/carteira"><img src="../../assets/images/Style=Roundwallet.png" class="img-side"></a>
  
-        <a href="http://localhost:4200/pix"><img src="../../assets/images/Style=Outlinedtransfer.png" class="img-side"></a>
+        <a href="http://localhost:4200/pages/pix"><img src="../../assets/images/Style=Outlinedtransfer.png" class="img-side"></a>
  
-        <a href="http://localhost:4200/transferencia"><img src="../../assets/images/Style=Roundcard.png" class="img-side"></a>
+        <a href="http://localhost:4200/pages/transferencia"><img src="../../assets/images/Style=Roundcard.png" class="img-side"></a>
   
-        <a href="http://localhost:4200/boleto"><img src="../../assets/images/Style=Roundboleto.png" class="img-side"></a>
+        <a href="http://localhost:4200/pages/boleto"><img src="../../assets/images/Style=Roundboleto.png" class="img-side"></a>
   
-        <a href="http://localhost:4200/extrato"><img src="../../assets/images/Style=Filledextract.png" class="img-side"></a>
+        <a href="http://localhost:4200/pages/extrato"><img src="../../assets/images/Style=Filledextract.png" class="img-side"></a>
 
  
  
@@ -41,11 +41,11 @@
     }@else {
 
     <div class="navigate-buttons-side">
-      <a href="http:localhost:4200/carteira" class="btn1">Carteira</a>
-      <a href="http:localhost:4200/pix" class="btn2">Pix</a>
-      <a href="http:localhost:4200/transferencia" class="btn3">Transferencia</a>
-      <a href="http:localhost:4200/boleto" class="btn4">Boleto</a>
-      <a href="http:localhost:4200/extrato" class="btn5">Extrato</a>
+      <a href="http://localhost:4200/pages/carteira" class="btn1">Carteira</a>
+      <a href="http://localhost:4200/pages/pix" class="btn2">Pix</a>
+      <a href="http://localhost:4200/pages/transferencia" class="btn3">Transferencia</a>
+      <a href="http://localhost:4200/pages/boleto" class="btn4">Boleto</a>
+      <a href="http://localhost:4200/pages/extrato" class="btn5">Extrato</a>
     </div>
 
     }
