--- a/src/app/pages/menu/carteira/carteira.component.html
+++ b/src/app/pages/menu/carteira/carteira.component.html
@@ -1,1 +1,56 @@
-<p>carteira works!</p>
+<div class="carteira-container">
+
+    <div class="profile">
+        <ul>
+            <li>
+                Olá {{user}}
+            </li>
+            <li>
+                Saldo:
+                <input type="radio"  (click)="eye()" />
+                    @if (eyeCondition) {
+              
+                        <img src="../../../../assets/images/Style=Roundopen_eye.png">
+              
+                    } @else {
+              
+                        <img src="../../../../assets/images/Style=Roundclose_eye.png">
+                    }
+                  
+
+                {{saldo}}
+            </li>
+        </ul>
+    </div>
+
+    <div class="carteira-cartao">
+        <ul>
+            <li><a href="http://localhost:4200/pages/carteira/meuscartoes">Meus Cartões</a></li>
+
+
+            <li><a href="http://localhost:4200/pages/carteira/cripto">Cripto Bench</a></li>
+
+        </ul>
+
+
+    </div>
+
+
+
+    <div class="extrato-buttons">
+        <div class="extrato-buttons-box">
+            <ul>
+                <li> <a href="http://localhost:4200/pages/extrato"> Entrada Recentes</a></li>
+                <li>
+
+                    <a href="http://localhost:4200/pages/extrato"> Saidas Recentes</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+
+
+
+
+</div>
