botao pix ajuste

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -42,7 +42,7 @@
 
     <div class="navigate-buttons-side">
       <a href="http://localhost:4200/pages/carteira" class="btn1">Carteira</a>
-      <a href="http://localhost:4200/pages/pix" class="btn2">Pix</a>
+      <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/pix" class="btn2">Pix</a>
       <a href="http://localhost:4200/pages/transferencia" class="btn3">Transferencia</a>
       <a href="http://localhost:4200/pages/boleto" class="btn4">Boleto</a>
       <a href="http://localhost:4200/pages/extrato" class="btn5">Extrato</a>
