--- a/src/app/pages/menu/pix/pix.component.html
+++ b/src/app/pages/menu/pix/pix.component.html
@@ -25,7 +25,7 @@
 
     <div class="carteira-cartao">
         <ul>
-            <li><input type="button" class="btn-pix" (Click)="pix()">Pagar/>
+            <li><button class="btn-pix" onclick="">Pagar</button>
 
 
             </li>
@@ -39,16 +39,6 @@
    
     </div>
     
-    @if(pix){
-
-        <h1 >dadadad</h1>
-
-        }
-        @else{
-
-            <h1 >ahhahhaha</h1>
-        }
-
 
     <div class="extrato-buttons">
         <div class="extrato-buttons-box">
