--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,6 +6,26 @@
 
     <div class="navigate-buttons">
       <ul>
+<!--Se for usar stackblictz -->
+  se for usar local
+        <li> <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/account"><img src="../../assets/images/Style=Filledsettings.png" class="img-top">Account</a></li>
+
+        <li>
+          <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/dashboard"><img src="../../assets/images/Style=Filleddashboard.png" class="img-top">Dashboard</a>
+        </li>
+
+        <li> <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/sac"><img src="../../assets/images/Style=Sharpsac.png" class="img-top">SAC</a>
+
+        <li>
+          <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/about"><img src="../../assets/images/Style=Roundpin.png" class="img-top">Quem Somos</a>
+
+        </li> 
+
+
+
+
+<!-- 
+  se for usar local
         <li> <a href="http://localhost:4200/pages/account"><img src="../../assets/images/Style=Filledsettings.png" class="img-top">Account</a></li>
 
         <li>
@@ -17,15 +37,31 @@
         <li>
           <a href="http://localhost:4200/pages/about"><img src="../../assets/images/Style=Roundpin.png" class="img-top">Quem Somos</a>
 
-        </li>
+        </li> -->
+
+
+
+
       </ul>
     </div> 
   </nb-layout-header>
 
   <nb-sidebar left tag="left">
     @if (sidebarState === 'compacted') {
-    
-        <a href="http://localhost:4200/pages/carteira"><img src="../../assets/images/Style=Roundwallet.png" class="img-side"></a>
+    <!--Se for usar o stackblitz-->
+        <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/carteira"><img src="../../assets/images/Style=Roundwallet.png" class="img-side"></a>
+ 
+        <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/pix"><img src="../../assets/images/Style=Outlinedtransfer.png" class="img-side"></a>
+ 
+        <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/transferencia"><img src="../../assets/images/Style=Roundcard.png" class="img-side"></a>
+  
+        <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/boleto"><img src="../../assets/images/Style=Roundboleto.png" class="img-side"></a>
+  
+        <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/extrato"><img src="../../assets/images/Style=Filledextract.png" class="img-side"></a>
+
+        <!--
+          se for usar local
+          <a href="http://localhost:4200/pages/carteira"><img src="../../assets/images/Style=Roundwallet.png" class="img-side"></a>
  
         <a href="http://localhost:4200/pages/pix"><img src="../../assets/images/Style=Outlinedtransfer.png" class="img-side"></a>
  
@@ -35,18 +71,32 @@
   
         <a href="http://localhost:4200/pages/extrato"><img src="../../assets/images/Style=Filledextract.png" class="img-side"></a>
 
- 
- 
+  -->
 
     }@else {
 
+<!--Se for usar stackblitz-->
+
+      <div class="navigate-buttons-side">
+        <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/carteira" class="btn1">Carteira</a>
+        <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/pix" class="btn2">Pix</a>
+        <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/transferencia" class="btn3">Transferencia</a>
+        <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/boleto" class="btn4">Boleto</a>
+        <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/extrato" class="btn5">Extrato</a>
+      </div> 
+
+
+
+
+<!-- 
+se for usar local host
     <div class="navigate-buttons-side">
       <a href="http://localhost:4200/pages/carteira" class="btn1">Carteira</a>
-      <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/pix" class="btn2">Pix</a>
+      <a href="http://localhost:4200/pages/pix" class="btn2">Pix</a>
       <a href="http://localhost:4200/pages/transferencia" class="btn3">Transferencia</a>
       <a href="http://localhost:4200/pages/boleto" class="btn4">Boleto</a>
       <a href="http://localhost:4200/pages/extrato" class="btn5">Extrato</a>
-    </div>
+    </div> -->
 
     }
   </nb-sidebar>
