ajuste de resolução do monitor e o nome do cartao pix

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,7 +6,7 @@
 
     <div class="navigate-buttons">
       <ul>
-<!--Se for usar stackblictz -->
+<!--Se for usar stackblictz 
  
         <li> <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/account"><img src="../../assets/images/Style=Filledsettings.png" class="img-top">Account</a></li>
 
@@ -22,10 +22,10 @@
         </li> 
 
 
-
+-->
 
 <!-- 
-  se for usar local
+  se for usar local -->
         <li> <a href="http://localhost:4200/pages/account"><img src="../../assets/images/Style=Filledsettings.png" class="img-top">Account</a></li>
 
         <li>
@@ -37,7 +37,7 @@
         <li>
           <a href="http://localhost:4200/pages/about"><img src="../../assets/images/Style=Roundpin.png" class="img-top">Quem Somos</a>
 
-        </li> -->
+        </li>
 
 
 
@@ -48,7 +48,7 @@
 
   <nb-sidebar left tag="left">
     @if (sidebarState === 'compacted') {
-    <!--Se for usar o stackblitz-->
+    <!--Se for usar o stackblitz
         <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/carteira"><img src="../../assets/images/Style=Roundwallet.png" class="img-side"></a>
  
         <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/pix"><img src="../../assets/images/Style=Outlinedtransfer.png" class="img-side"></a>
@@ -58,9 +58,10 @@
         <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/boleto"><img src="../../assets/images/Style=Roundboleto.png" class="img-side"></a>
   
         <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/extrato"><img src="../../assets/images/Style=Filledextract.png" class="img-side"></a>
-
+-->
         <!--
-          se for usar local
+          se for usar local -->
+
           <a href="http://localhost:4200/pages/carteira"><img src="../../assets/images/Style=Roundwallet.png" class="img-side"></a>
  
         <a href="http://localhost:4200/pages/pix"><img src="../../assets/images/Style=Outlinedtransfer.png" class="img-side"></a>
@@ -71,11 +72,10 @@
   
         <a href="http://localhost:4200/pages/extrato"><img src="../../assets/images/Style=Filledextract.png" class="img-side"></a>
 
-  -->
-
+ 
     }@else {
 
-<!--Se for usar stackblitz-->
+<!--Se for usar stackblitz
 
       <div class="navigate-buttons-side">
         <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/carteira" class="btn1">Carteira</a>
@@ -85,18 +85,18 @@
         <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/extrato" class="btn5">Extrato</a>
       </div> 
 
+-->
 
 
-
-<!-- 
-se for usar local host
+<!--
+se for usar local host -->
     <div class="navigate-buttons-side">
       <a href="http://localhost:4200/pages/carteira" class="btn1">Carteira</a>
       <a href="http://localhost:4200/pages/pix" class="btn2">Pix</a>
       <a href="http://localhost:4200/pages/transferencia" class="btn3">Transferencia</a>
       <a href="http://localhost:4200/pages/boleto" class="btn4">Boleto</a>
       <a href="http://localhost:4200/pages/extrato" class="btn5">Extrato</a>
-    </div> -->
+    </div> 
 
     }
   </nb-sidebar>
