--- a/src/app/pages/menu/pix/pix.component.html
+++ b/src/app/pages/menu/pix/pix.component.html
@@ -23,7 +23,7 @@
         </ul>
     </div>
 
-    <div class="carteira-cartao">
+    <div class="pix-cartao">
         <ul>
             <li><button class="btn-pix" onclick="">Pagar</button>
 
