--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -73,3 +73,35 @@ border-radius: 12px;
 .btn5 {
   background-image: url(../../assets/images/Style=Filledextract.png);
 }
+
+.profile ul {
+
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+
+}
+
+.profile ul li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+  font-size: 30px;
+  border-radius: 1px 20px 1px 20px;
+
+  padding: 10px 20px 0px 20px;
+  background-color: #8ebfff;
+  color: #ffffff;
+  text-shadow: 2px 4px 4px rgba(46, 91, 173, 0.6);
+
+  height: 40px;
+}
+
+
+.profile ul li input {
+
+
+  align-items: center;
+
+}
