--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,7 +6,7 @@
 
     <div class="navigate-buttons">
       <ul>
-<!--Se for usar stackblictz 
+        <!--Se for usar stackblictz 
  
         <li> <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/account"><img src="../../assets/images/Style=Filledsettings.png" class="img-top">Account</a></li>
 
@@ -24,26 +24,45 @@
 
 -->
 
-<!-- 
+        <!-- 
   se for usar local -->
-        <li> <a href="http://localhost:4200/pages/account"><img src="../../assets/images/Style=Filledsettings.png" class="img-top">Account</a></li>
-
         <li>
-          <a href="http://localhost:4200/pages/dashboard"><img src="../../assets/images/Style=Filleddashboard.png" class="img-top">Dashboard</a>
+          <a href="http://localhost:4200/pages/account"
+            ><img
+              src="../../assets/images/Style=Filledsettings.png"
+              class="img-top"
+            />Account</a
+          >
         </li>
 
-        <li> <a href="http://localhost:4200/pages/sac"><img src="../../assets/images/Style=Sharpsac.png" class="img-top">SAC</a>
-
         <li>
-          <a href="http://localhost:4200/pages/about"><img src="../../assets/images/Style=Roundpin.png" class="img-top">Quem Somos</a>
-
+          <a href="http://localhost:4200/pages/dashboard"
+            ><img
+              src="../../assets/images/Style=Filleddashboard.png"
+              class="img-top"
+            />Dashboard</a
+          >
         </li>
 
+        <li>
+          <a href="http://localhost:4200/pages/sac"
+            ><img
+              src="../../assets/images/Style=Sharpsac.png"
+              class="img-top"
+            />SAC</a
+          >
+        </li>
 
-
-
+        <li>
+          <a href="http://localhost:4200/pages/about"
+            ><img
+              src="../../assets/images/Style=Roundpin.png"
+              class="img-top"
+            />Quem Somos</a
+          >
+        </li>
       </ul>
-    </div> 
+    </div>
   </nb-layout-header>
 
   <nb-sidebar left tag="left">
@@ -59,23 +78,34 @@
   
         <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/extrato"><img src="../../assets/images/Style=Filledextract.png" class="img-side"></a>
 -->
-        <!--
+    <!--
           se for usar local -->
 
-          <a href="http://localhost:4200/pages/carteira"><img src="../../assets/images/Style=Roundwallet.png" class="img-side"></a>
- 
-        <a href="http://localhost:4200/pages/pix"><img src="../../assets/images/Style=Outlinedtransfer.png" class="img-side"></a>
- 
-        <a href="http://localhost:4200/pages/transferencia"><img src="../../assets/images/Style=Roundcard.png" class="img-side"></a>
-  
-        <a href="http://localhost:4200/pages/boleto"><img src="../../assets/images/Style=Roundboleto.png" class="img-side"></a>
-  
-        <a href="http://localhost:4200/pages/extrato"><img src="../../assets/images/Style=Filledextract.png" class="img-side"></a>
+    <a href="http://localhost:4200/pages/carteira"
+      ><img src="../../assets/images/Style=Roundwallet.png" class="img-side"
+    /></a>
 
- 
+    <a href="http://localhost:4200/pages/pix"
+      ><img
+        src="../../assets/images/Style=Outlinedtransfer.png"
+        class="img-side"
+    /></a>
+
+    <a href="http://localhost:4200/pages/transferencia"
+      ><img src="../../assets/images/Style=Roundcard.png" class="img-side"
+    /></a>
+
+    <a href="http://localhost:4200/pages/boleto"
+      ><img src="../../assets/images/Style=Roundboleto.png" class="img-side"
+    /></a>
+
+    <a href="http://localhost:4200/pages/extrato"
+      ><img src="../../assets/images/Style=Filledextract.png" class="img-side"
+    /></a>
+
     }@else {
 
-<!--Se for usar stackblitz
+    <!--Se for usar stackblitz
 
       <div class="navigate-buttons-side">
         <a href="https://bancobenchfrontend-4vyv--4200--a9c8a5a3.local-credentialless.webcontainer.io/pages/carteira" class="btn1">Carteira</a>
@@ -87,44 +117,45 @@
 
 -->
 
-
-<!--
+    <!--
 se for usar local host -->
     <div class="navigate-buttons-side">
       <a href="http://localhost:4200/pages/carteira" class="btn1">Carteira</a>
       <a href="http://localhost:4200/pages/pix" class="btn2">Pix</a>
-      <a href="http://localhost:4200/pages/transferencia" class="btn3">Transferencia</a>
+      <a href="http://localhost:4200/pages/transferencia" class="btn3"
+        >Transferencia</a
+      >
       <a href="http://localhost:4200/pages/boleto" class="btn4">Boleto</a>
       <a href="http://localhost:4200/pages/extrato" class="btn5">Extrato</a>
-    </div> 
+    </div>
 
     }
   </nb-sidebar>
 
   <nb-layout-column class="colored-column-warning">
-    
     <div class="profile">
       <ul>
-          <li>
-              Olá {{user}}
-          </li>
-          <li>
-              Saldo:
-            
-              @if (eyeCondition) {
+        <li>Olá {{ user }}</li>
+        <li>
+          Saldo: @if (eyeCondition) {
 
-              <img (click)="eye()"src="../../../../assets/images/Style=Roundopen_eye.png">
+          <img
+            (click)="eye()"
+            src="../../../../assets/images/Style=Roundclose_eye.png"
+          />
 
-              } @else {
+          } @else {
+          <img
+            (click)="eye()"
+            src="../../../../assets/images/Style=Roundopen_eye.png"
+          />
 
-              <img (click)="eye()"src="../../../../assets/images/Style=Roundclose_eye.png">
-              }
+          }
 
-
-              {{saldo}}
-          </li>
+          {{ saldo }}
+        </li>
       </ul>
-  </div>
+    </div>
     <router-outlet> </router-outlet>
   </nb-layout-column>
 </nb-layout>
