--- a/src/app/pages/menu/pix/newpix/newpix.component.scss
+++ b/src/app/pages/menu/pix/newpix/newpix.component.scss
@@ -20,6 +20,7 @@
   font-size: 28px;
   font-weight: bold;
   cursor: pointer;
+padding-left: 670px;
 }
 
 .close:hover {
@@ -31,7 +32,36 @@
 }
 .pix-box {
   display: flex;
-  align-items: baseline;
-  justify-content: end;
-  
+  justify-content: flex-start;
+  flex-direction: column;
+  align-content: space-around;
+  align-items: center;
+}
+.pix-box a {
+  display: flex;
+  justify-content: center;
+  flex-direction: center;
+  align-items: center;
+  text-align: center;
+}
+.amount{
+
+
+
+}
+.input-pix{
+
+  border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-top-style: none;
+    border-right-style: solid;
+    border-bottom-style: solid;
+    border-left-style: none;
+    border-right-color: #f7f7f700;
+    border-bottom-color: #000033;
+    background-color: transparent;
+    padding-left: 4px;
+
 }
