--- a/src/app/pages/login/components/signup/signup.component.scss
+++ b/src/app/pages/login/components/signup/signup.component.scss
@@ -13,7 +13,22 @@
      margin-bottom: 6px;
     }
     
-  
+  .register-box input{
+
+    border-width: 1px;
+    color: #ffffff;
+    border-top-style: none;
+    border-right-style: solid;
+    border-bottom-style: solid;
+    border-left-style: none;
+    border-right-color: #f7f7f700;
+    border-bottom-color: #000033;
+   background-color: #ffffff6e;
+    padding-left: 4px;
+
+
+
+  }
   .btn {
   display: block;
       border-radius: 4px;
