botoes para o pix

--- a/src/app/pages/menu/pix/newpix/newpix.component.html
+++ b/src/app/pages/menu/pix/newpix/newpix.component.html
@@ -25,14 +25,16 @@
   <input type="text" placeholder="Chave" class="input-pix" formControlName="Chave" />
   <br/>
 
-  <input type="number" placeholder="Valor" class="input-pix"formControlName="Valor "/>
+  <input type="number" placeholder="Valor" class="input-pix2"formControlName="Valor "/>
 </div>
 
         </div>
 
       
     </div>
-   
+    <button type="button" > < </button>
+    <button type="button" > Confirmar </button>
+    <button type="button" > > </button>
   </div>
 
 
