--- a/src/app/pages/menu/pix/pix.component.scss
+++ b/src/app/pages/menu/pix/pix.component.scss
@@ -17,7 +17,7 @@
 
 .pix-cartao ul li {
 
-    margin: 0px 100px 0px 20px;
+    margin: 0px 20px 0px 20px;
     background-image: url(../../../../assets/images/1200px-Logo_-_pix_powered_by_Banco_Central_\(Brazil\,_2020\).png);
     background-size: 60%;
 
@@ -66,7 +66,8 @@
     height: 120px;
     width: 450px;
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
     border-radius: 15px;
 
 }
@@ -79,7 +80,7 @@
 
     text-shadow: 2px 4px 4px rgba(46, 91, 173, 0.6);
     padding-right: 15px;
-    padding-left: 5px;
+    padding-left: 15px;
 }
 
 .btn-pix {
