--- a/src/app/pages/menu/pix/newpix/newpix.component.scss
+++ b/src/app/pages/menu/pix/newpix/newpix.component.scss
@@ -66,7 +66,7 @@ padding-left: 670px;
     border-bottom-color: #000033;
     background-color: transparent;
     padding-left: 4px;
-    margin-bottom: 25px;
+    margin-bottom: 53px;
 
 }
 .input-pix2{
@@ -85,4 +85,19 @@ width:90px ;
     background-color: transparent;
     padding-left: 4px;
 
+}
+
+
+.esconder {
+  display: none;
+}
+
+.bg-img img{
+  padding-top: 15px;
+width: 200px;
+height: 200px;
+}
+
+.esconderF {
+  display: none;
 }
